--- a/core/nut.js/package.json
+++ b/core/nut.js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nut-tree/nut-js",
+  "name": "@potatoranch/nut-js",
   "version": "4.2.0",
   "license": "Apache-2.0",
   "main": "dist/index",
@@ -57,15 +57,15 @@
     "typedoc": "typedoc --out docs"
   },
   "dependencies": {
-    "@nut-tree/default-clipboard-provider": "workspace:*",
-    "@nut-tree/libnut": "workspace:*",
-    "@nut-tree/shared": "workspace:*",
-    "@nut-tree/provider-interfaces": "workspace:*",
+    "@potatoranch/default-clipboard-provider": "workspace:*",
+    "@potatoranch/libnut": "workspace:*",
+    "@potatoranch/shared": "workspace:*",
+    "@potatoranch/provider-interfaces": "workspace:*",
     "jimp": "0.22.10",
     "node-abort-controller": "3.1.1"
   },
   "devDependencies": {
-    "@nut-tree/configs": "workspace:*"
+    "@potatoranch/configs": "workspace:*"
   },
   "engines": {
     "node": ">=16"
