--- a/core/provider-interfaces/package.json
+++ b/core/provider-interfaces/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nut-tree/provider-interfaces",
+  "name": "@potatoranch/provider-interfaces",
   "version": "4.2.0",
   "description": "Public provider interfaces for @nut-tree/nut-js",
   "main": "dist/index",
@@ -23,9 +23,9 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@nut-tree/shared": "workspace:*"
+    "@potatoranch/shared": "workspace:*"
   },
   "devDependencies": {
-    "@nut-tree/configs": "workspace:*"
+    "@potatoranch/configs": "workspace:*"
   }
 }
