--- a/providers/libnut/package.json
+++ b/providers/libnut/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nut-tree/libnut",
+  "name": "@potatoranch/libnut",
   "version": "4.2.0",
   "description": "libnut is an N-API module for desktop automation with node",
   "main": "dist/index",
@@ -47,8 +47,8 @@
     "@potatoranch/libnut-win32": "2.7.1"
   },
   "devDependencies": {
-    "@nut-tree/configs": "workspace:*",
-    "@nut-tree/shared": "workspace:*",
-    "@nut-tree/provider-interfaces": "workspace:*"
+    "@potatoranch/configs": "workspace:*",
+    "@potatoranch/shared": "workspace:*",
+    "@potatoranch/provider-interfaces": "workspace:*"
   }
 }
