--- a/core/nut.js/package.json
+++ b/core/nut.js/package.json
@@ -51,8 +51,8 @@
     "test": "jest --runInBand",
     "coverage": "jest --coverage --runInBand --logHeapUsage",
     "coverage:clean": "rimraf coverage",
-    "publish:next": "pnpm publish --tag next --no-git-checks",
-    "publish:release": "pnpm publish --no-git-checks",
+    "publish:next": "pnpm publish --access public --tag next --no-git-checks",
+    "publish:release": "pnpm publish --access public --no-git-checks",
     "prepublishOnly": "pnpm run compile",
     "typedoc": "typedoc --out docs"
   },
