--- a/providers/clipboardy/package.json
+++ b/providers/clipboardy/package.json
@@ -10,8 +10,8 @@
     "test": "jest --runInBand",
     "clean": "rimraf dist",
     "compile": "pnpm run clean && tsc -p .",
-    "publish:next": "pnpm publish --tag next --no-git-checks",
-    "publish:release": "pnpm publish --no-git-checks",
+    "publish:next": "pnpm publish --access public --tag next --no-git-checks",
+    "publish:release": "pnpm publish --access public --no-git-checks",
     "prepublishOnly": "pnpm run compile"
   },
   "keywords": [
