--- a/providers/libnut/package.json
+++ b/providers/libnut/package.json
@@ -33,8 +33,8 @@
     "test": "jest --runInBand",
     "coverage": "jest --coverage --runInBand",
     "coverage:clean": "rimraf coverage",
-    "publish:next": "pnpm publish --tag next --no-git-checks",
-    "publish:release": "pnpm publish --no-git-checks",
+    "publish:next": "pnpm publish --access public --tag next --no-git-checks",
+    "publish:release": "pnpm publish --access public --no-git-checks",
     "prepublishOnly": "pnpm run compile",
     "version": "npm version --no-git-tag -f"
   },
